Update VLLM_TGIS_ADAPTER_VERSION to "0.8.0"

--- a/Dockerfile.ppc64le.ubi
+++ b/Dockerfile.ppc64le.ubi
@@ -1,6 +1,6 @@
 ARG BASE_UBI_IMAGE_TAG=9.6-1754584681
 ARG VLLM_VERSION
-ARG VLLM_TGIS_ADAPTER_VERSION=0.7.1
+ARG VLLM_TGIS_ADAPTER_VERSION="0.8.0"
 ARG MAX_JOBS=8
 ARG PYARROW_PARALLEL=1
 
