--- a/Dockerfile.s390x.ubi
+++ b/Dockerfile.s390x.ubi
@@ -1,6 +1,6 @@
 # Base UBI image for s390x architecture
 ARG BASE_UBI_IMAGE_TAG=9.5-1741850109
-ARG VLLM_VERSION
+ARG VLLM_VERSION="v0.10.0.2"
 ARG PYTHON_VERSION=3.12
 ARG VLLM_TGIS_ADAPTER_VERSION="0.8.0"
 FROM registry.access.redhat.com/ubi9/ubi-minimal:${BASE_UBI_IMAGE_TAG} AS base
