--- a/Dockerfile.ppc64le.ubi
+++ b/Dockerfile.ppc64le.ubi
@@ -1,5 +1,5 @@
 ARG BASE_UBI_IMAGE_TAG=9.6-1754584681
-ARG VLLM_VERSION="v0.10.0.2"
+ARG VLLM_VERSION="0.10.1.1.6"
 ARG VLLM_TGIS_ADAPTER_VERSION="0.8.0"
 ARG MAX_JOBS=8
 ARG PYARROW_PARALLEL=1
