--- a/.tekton/odh-vllm-cpu-pull-request.yaml
+++ b/.tekton/odh-vllm-cpu-pull-request.yaml
@@ -7,14 +7,13 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     build.appstudio.redhat.com/pull_request_number: "{{pull_request_number}}"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-comment: "^/build-powerz"
-    pipelinesascode.tekton.dev/on-label: "[build-all]"
+    pipelinesascode.tekton.dev/on-comment: "^/build-konflux"
+    pipelinesascode.tekton.dev/on-label: "[build-konflux]"
     pipelinesascode.tekton.dev/on-event: "[pull_request]"
     pipelinesascode.tekton.dev/cancel-in-progress: "true"
-  creationTimestamp: null
   labels:
     appstudio.openshift.io/application: automation
-    appstudio.openshift.io/component: pull-request-pipelines
+    appstudio.openshift.io/component: pull-request-pipelines-vllm-cpu
     pipelines.appstudio.openshift.io/type: build
   name: vllm-cpu-on-pull-request
   namespace: rhoai-tenant
@@ -30,11 +29,9 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/rhoai-tenant/pull-request-pipelines:vllm-cpu-{{revision}}
-  - name: s390x-dockerfile
-    value: Dockerfile.s390x.ubi
-  - name: ppc64le-dockerfile
-    value: Dockerfile.ppc64le.ubi
+    value: quay.io/rhoai/pull-request-pipelines:vllm-cpu-{{revision}}
+  - name: dockerfile
+    value: Dockerfile.konflux.cpu
   - name: path-context
     value: .
   - name: hermetic
