--- a/Dockerfile.ubi
+++ b/Dockerfile.ubi
@@ -24,17 +24,34 @@ RUN microdnf install -y \
     && microdnf clean all
 
 
-## Python Installer ############################################################
-FROM base AS python-install
-ARG PYTHON_VERSION
+FROM base AS cuda-base
+ARG BASE_UBI_IMAGE_TAG
 ARG CUDA_MAJOR
 ARG CUDA_MINOR
 
+RUN export rhel_base=${BASE_UBI_IMAGE_TAG/\.*/} && \
+    curl -Lo /etc/yum.repos.d/cuda-rhel${rhel_base}.repo \
+    https://developer.download.nvidia.com/compute/cuda/repos/rhel${rhel_base}/x86_64/cuda-rhel${rhel_base}.repo
+
 ENV CUDA_MAJOR=${CUDA_MAJOR}
 ENV CUDA_MINOR=${CUDA_MINOR}
+ENV CUDA_HOME="/usr/local/cuda-${CUDA_MAJOR}.${CUDA_MINOR}"
+ENV PATH="${CUDA_HOME}/bin:${PATH}"
+ENV LD_LIBRARY_PATH="${CUDA_HOME}/lib64:${CUDA_HOME}/lib64/stubs/:${CUDA_HOME}/extras/CUPTI/lib64"
+RUN microdnf install -y --nodocs \
+        # cuobjdump , nvcc and nvrtc and are required by deepgemm for JIT
+        cuda-cuobjdump-${CUDA_MAJOR}-${CUDA_MINOR} \
+        cuda-nvcc-${CUDA_MAJOR}-${CUDA_MINOR} \
+        cuda-nvrtc-${CUDA_MAJOR}-${CUDA_MINOR} \
+    && \
+    microdnf clean all && \
+    ln -s ${CUDA_HOME}/lib64/stubs/libcuda.so /usr/lib64/
+
+## Python Installer ############################################################
+FROM cuda-base AS python-install
+ARG PYTHON_VERSION
 ENV UV_EXTRA_INDEX_URL=https://download.pytorch.org/whl/cu${CUDA_MAJOR}${CUDA_MINOR}
 ENV UV_INDEX_STRATEGY=unsafe-best-match
-ENV PIP_EXTRA_INDEX_URL=https://download.pytorch.org/whl/cu${CUDA_MAJOR}${CUDA_MINOR}
 
 ENV VIRTUAL_ENV=/opt/vllm
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
@@ -69,7 +86,7 @@ COPY LICENSE /licenses/vllm.md
 COPY examples/*.jinja /app/data/template/
 RUN mkdir -p /opt/app-root && \
     ln -s /app/data/template /opt/app-root/template
-# install vllm (and any other dependencies )by running the payload script
+# install vllm (and any other dependencies) by running the payload script
 RUN --mount=type=cache,target=/root/.cache/uv \
     --mount=type=bind,src=payload,target=/workspace/payload \
     ./payload/run.sh
