--- a/Dockerfile.konflux.cpu
+++ b/Dockerfile.konflux.cpu
@@ -77,7 +77,7 @@ ENV C_INCLUDE_PATH="/usr/local/include:$C_INCLUDE_PATH"
 ENV LD_LIBRARY_PATH=/opt/vllm/lib64/python${PYTHON_VERSION}/site-packages/torch/lib:/usr/local/lib:$LD_LIBRARY_PATH:/usr/local/lib64:/usr/local/lib:/usr/lib64:/usr/lib
 ENV OMP_NUM_THREADS=16
 ENV UV_LINK_MODE=copy
-ARG VLLM_VERSION="v0.10.0.6"
+ARG VLLM_VERSION="0.10.1.1.6"
 
 
 RUN if [ "$(uname -m)" = "s390x" ]; then \
@@ -169,7 +169,7 @@ FROM vllm-openai AS vllm-grpc-adapter
 
 USER root
 
-ARG VLLM_TGIS_ADAPTER_VERSION="0.8.0"
+ARG VLLM_TGIS_ADAPTER_VERSION="0.9.0.post1"
 RUN --mount=type=cache,target=/root/.cache/uv \
     --mount=type=cache,from=builder-base,source=/wheelsdir/,target=/wheelsdir/,ro \
     HOME=/root uv pip install "$(echo /wheelsdir/vllm*.whl)[tensorizer]" vllm-tgis-adapter==${VLLM_TGIS_ADAPTER_VERSION};
