--- a/Dockerfile.ubi
+++ b/Dockerfile.ubi
@@ -70,12 +70,13 @@ ARG PYTHON_VERSION
 WORKDIR /workspace
 
 ENV VIRTUAL_ENV=/opt/vllm
-ENV PATH=$VIRTUAL_ENV/bin:$PATH
+ENV PATH="$VIRTUAL_ENV/bin:${CUDA_HOME}/bin:$PATH"
 
 # force using the python venv's cuda runtime libraries
 ENV LD_LIBRARY_PATH="${VIRTUAL_ENV}/lib/python${PYTHON_VERSION}/site-packages/nvidia/cuda_nvrtc/lib:${LD_LIBRARY_PATH}"
 ENV LD_LIBRARY_PATH="${VIRTUAL_ENV}/lib/python${PYTHON_VERSION}/site-packages/nvidia/cuda_runtime/lib:${LD_LIBRARY_PATH}"
 ENV LD_LIBRARY_PATH="${VIRTUAL_ENV}/lib/python${PYTHON_VERSION}/site-packages/nvidia/nvtx/lib:${LD_LIBRARY_PATH}"
+ENV LIBRARY_PATH="${CUDA_HOME}/lib64/stubs:/usr/lib64"
 
 # Triton needs a CC compiler
 RUN microdnf install -y gcc && \
@@ -94,7 +95,7 @@ RUN --mount=type=cache,target=/root/.cache/uv \
 # temporary workaround until https://github.com/openai/tiktoken/pull/446 is merged
 COPY make-blobfile-optional-in-tiktoken.patch /tmp/
 RUN microdnf install -y patch && \
-    patch -p 1 "$VIRTUAL_ENV/lib/python3.12/site-packages/tiktoken/load.py" /tmp/make-blobfile-optional-in-tiktoken.patch && \
+    patch -p 1 "$VIRTUAL_ENV/lib/python${PYTHON_VERSION}/site-packages/tiktoken/load.py" /tmp/make-blobfile-optional-in-tiktoken.patch && \
     microdnf remove -y patch && \
     microdnf clean all
 
