--- a/Dockerfile.konflux.cpu
+++ b/Dockerfile.konflux.cpu
@@ -9,7 +9,7 @@ FROM registry.access.redhat.com/ubi9/ubi-minimal:${BASE_UBI_IMAGE_TAG} AS builde
 
 ARG VLLM_VERSION="0.10.1.1.6"
 ARG PYTHON_VERSION=3.12
-ARG VLLM_TGIS_ADAPTER_VERSION="0.8.0"
+ARG VLLM_TGIS_ADAPTER_VERSION="0.9.0.post1"
 ARG VLLM_TARGET_DEVICE=cpu
 
 USER root
@@ -169,7 +169,7 @@ FROM vllm-openai AS vllm-grpc-adapter
 
 USER root
 
-ARG VLLM_TGIS_ADAPTER_VERSION="0.8.0"
+ARG VLLM_TGIS_ADAPTER_VERSION="0.9.0.post1"
 RUN --mount=type=cache,target=/root/.cache/uv \
     --mount=type=cache,from=builder-base,source=/wheelsdir/,target=/wheelsdir/,ro \
     HOME=/root uv pip install "$(echo /wheelsdir/vllm*.whl)[tensorizer]" vllm-tgis-adapter==${VLLM_TGIS_ADAPTER_VERSION};
