--- a/Dockerfile.konflux.cpu
+++ b/Dockerfile.konflux.cpu
@@ -110,7 +110,7 @@ RUN --mount=type=cache,target=/root/.cache/uv \
          # system dependencies needed at runtime for ppc64le; \
         rpm -ivh https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm; \
         microdnf install --nodocs -y \
-            libomp tar findutils openssls \
+            libomp tar findutils openssl \
             pkgconfig g++ gcc-fortran libsndfile \
             libtiff libjpeg openjpeg2 zlib zeromq \
             freetype lcms2 libwebp tcl tk utf8proc \
