Dockerfile.ubi: include git for triton-kernels

--- a/Dockerfile.ubi
+++ b/Dockerfile.ubi
@@ -76,8 +76,8 @@ ENV LD_LIBRARY_PATH="${VIRTUAL_ENV}/lib/python${PYTHON_VERSION}/site-packages/nv
 ENV LD_LIBRARY_PATH="${VIRTUAL_ENV}/lib/python${PYTHON_VERSION}/site-packages/nvidia/nvtx/lib:${LD_LIBRARY_PATH}"
 ENV LIBRARY_PATH="${CUDA_HOME}/lib64/stubs:/usr/lib64"
 
-# Triton needs a CC compiler
-RUN microdnf install -y gcc && \
+# Triton needs a CC compiler, triton-kernels install from a git URL
+RUN microdnf install -y gcc git && \
     microdnf clean all
 
 
