--- a/Dockerfile.rocm.ubi
+++ b/Dockerfile.rocm.ubi
@@ -131,6 +131,10 @@ RUN umask 002 && \
     mkdir -p /licenses /home/vllm && \
     chmod g+rwx /home/vllm
 
+ENV TIKTOKEN_CACHE_DIR=/home/vllm/tiktoken_cache
+RUN --mount=type=bind,src=tools/predownload_tiktoken_tokenizers.py,target=predownload_tiktoken_tokenizers.py \
+    python predownload_tiktoken_tokenizers.py
+
 COPY LICENSE /licenses/vllm.md
 COPY examples/*.jinja /app/data/template/
 RUN mkdir -p /opt/app-root && \
