Updated vllm tgis adapter to 0.9.1

--- a/Dockerfile.konflux.cpu
+++ b/Dockerfile.konflux.cpu
@@ -9,7 +9,7 @@ FROM registry.access.redhat.com/ubi9/ubi-minimal:${BASE_UBI_IMAGE_TAG} AS builde
 
 ARG VLLM_VERSION="0.11.0.1"
 ARG PYTHON_VERSION=3.12
-ARG VLLM_TGIS_ADAPTER_VERSION="0.9.0.post1"
+ARG VLLM_TGIS_ADAPTER_VERSION="0.9.1"
 ARG VLLM_TARGET_DEVICE=cpu
 
 USER root
