Dockerfile.ubi: add environment variable for openai_harmony, add cl100k tokenizer
`openai_harmony` uses `TIKTOKEN_RS_CACHE_DIR` instead of `TIKTOKEN_CACHE_DIR` to store/retrieve tokenizers, using
the same logic used [in the python module](https://github.com/openai/tiktoken/blob/0.12.0/tiktoken/load.py?plain=1#L38-L41).

Setting `TIKTOKEN_RS_CACHE_DIR=$TIKTOKEN_CACHE_DIR` allows using the same cache for both modules.

See:

https://github.com/openai/harmony/blob/v0.0.4/src/tiktoken_ext/public_encodings.rs#L416-L441
https://github.com/openai/harmony/blob/v0.0.4/src/tiktoken_ext/public_encodings.rs#L462-L479

INFERENG-2959

--- a/Dockerfile.rocm.ubi
+++ b/Dockerfile.rocm.ubi
@@ -131,7 +131,11 @@ RUN umask 002 && \
     mkdir -p /licenses /home/vllm && \
     chmod g+rwx /home/vllm
 
-ENV TIKTOKEN_CACHE_DIR=/home/vllm/tiktoken_cache
+# pre-download tiktoken/harmony tokenizer for disconnected environments
+# openai_harmony uses TIKTOKEN_RS_CACHE_DIR
+# while the python tiktoken module uses TIKTOKEN_CACHE_DIR
+ENV TIKTOKEN_CACHE_DIR=${HOME}/.cache/tiktoken
+ENV TIKTOKEN_RS_CACHE_DIR=${TIKTOKEN_CACHE_DIR}
 RUN --mount=type=bind,src=tools/predownload_tiktoken_tokenizers.py,target=predownload_tiktoken_tokenizers.py \
     python predownload_tiktoken_tokenizers.py
 
