Dockerfile.rocm.ubi: remove hardcoded torch install

--- a/Dockerfile.rocm.ubi
+++ b/Dockerfile.rocm.ubi
@@ -42,11 +42,6 @@ gpgkey=https://repo.radeon.com/rocm/rocm.gpg.key" > /etc/yum.repos.d/amdgpu.repo
 
 
 RUN --mount=type=cache,target=/root/.cache/uv \
-    export version="$(awk -F. '{print $1"."$2}' <<< $ROCM_VERSION)" && \
-    uv pip install --pre \
-        --index-url "https://download.pytorch.org/whl/rocm${version}" \
-        torch==2.7.0+rocm${version}\
-        torchvision==0.22.0+rocm${version} && \
     microdnf install -y --nodocs \
         # aiter requires rocm dev dependencies (and temporarily, which, see https://github.com/ROCm/aiter/pull/932)
         which \
@@ -72,14 +67,7 @@ RUN --mount=type=cache,target=/root/.cache/uv \
         && \
     microdnf clean all
 
-ENV PATH=/opt/rocm/bin:$PATH \
-    LD_LIBRARY_PATH="$VIRTUAL_ENV/lib/python${PYTHON_VERSION}/site-packages/numpy.libs"
-ENV LD_LIBRARY_PATH="$VIRTUAL_ENV/lib/python${PYTHON_VERSION}/site-packages/pillow.libs:$LD_LIBRARY_PATH"
-ENV LD_LIBRARY_PATH="$VIRTUAL_ENV/lib/python${PYTHON_VERSION}/site-packages/triton/backends/amd/lib:$LD_LIBRARY_PATH"
-ENV LD_LIBRARY_PATH="$VIRTUAL_ENV/lib/python${PYTHON_VERSION}/site-packages/torch/lib:$LD_LIBRARY_PATH"
-
-RUN echo $LD_LIBRARY_PATH | tr : \\n >> /etc/ld.so.conf.d/torch-venv.conf && \
-    ldconfig
+ENV PATH=/opt/rocm/bin:$PATH
 
 FROM rocm_base as build_amdsmi
 
