--- a/Dockerfile.ubi
+++ b/Dockerfile.ubi
@@ -117,7 +117,8 @@ RUN umask 002 && \
 ENV TIKTOKEN_CACHE_DIR=${HOME}/.cache/tiktoken
 ENV TIKTOKEN_RS_CACHE_DIR=${TIKTOKEN_CACHE_DIR}
 RUN --mount=type=bind,src=tools/predownload_tiktoken_tokenizers.py,target=predownload_tiktoken_tokenizers.py \
-    python predownload_tiktoken_tokenizers.py
+    python predownload_tiktoken_tokenizers.py && \
+    chmod g+rwx "${TIKTOKEN_CACHE_DIR}"
 
 USER 2000
 WORKDIR /home/vllm
