Dockerfile.rocm.ubi: add hip-devel

--- a/Dockerfile.rocm.ubi
+++ b/Dockerfile.rocm.ubi
@@ -49,6 +49,7 @@ RUN --mount=type=cache,target=/root/.cache/uv \
         hipblas-devel \
         hipblaslt-devel \
         hipcc \
+        hip-devel \
         hipcub-devel \
         hipfft-devel \
         hiprand-devel \
