--- a/Dockerfile.rocm.ubi
+++ b/Dockerfile.rocm.ubi
@@ -110,7 +110,8 @@ ENV HF_HUB_OFFLINE=1 \
     HIP_FORCE_DEV_KERNARG=1 \
     OUTLINES_CACHE_DIR=/tmp/outlines \
     NUMBA_CACHE_DIR=/tmp/numba \
-    TRITON_CACHE_DIR=/tmp/triton
+    TRITON_CACHE_DIR=/tmp/triton \
+    VLLM_CACHE_ROOT=/tmp/vllm
 
 # setup non-root user for OpenShift
 RUN umask 002 && \
