--- a/Dockerfile.tpu.ubi
+++ b/Dockerfile.tpu.ubi
@@ -40,7 +40,8 @@ ENV HF_HUB_OFFLINE=1 \
     VLLM_WORKER_MULTIPROC_METHOD=spawn \
     OUTLINES_CACHE_DIR=/tmp/outlines \
     NUMBA_CACHE_DIR=/tmp/numba \
-    TRITON_CACHE_DIR=/tmp/triton
+    TRITON_CACHE_DIR=/tmp/triton \
+    VLLM_CACHE_ROOT=/tmp/vllm
 
 # setup non-root user for OpenShift
 RUN umask 002 && \
