--- a/Dockerfile.ubi
+++ b/Dockerfile.ubi
@@ -121,7 +121,8 @@ ENV TIKTOKEN_CACHE_DIR=${HOME}/.cache/tiktoken
 ENV TIKTOKEN_RS_CACHE_DIR=${TIKTOKEN_CACHE_DIR}
 RUN --mount=type=bind,src=tools/predownload_tiktoken_tokenizers.py,target=predownload_tiktoken_tokenizers.py \
     python predownload_tiktoken_tokenizers.py && \
-    chmod g+rwx "${TIKTOKEN_CACHE_DIR}"
+    chmod g+rwx "${TIKTOKEN_CACHE_DIR}" && \
+    chown -R vllm:vllm ~/.cache
 
 USER 2000
 WORKDIR /home/vllm
