--- a/Dockerfile.konflux.cpu
+++ b/Dockerfile.konflux.cpu
@@ -116,7 +116,7 @@ RUN --mount=type=cache,target=/root/.cache/uv \
             freetype lcms2 libwebp tcl tk utf8proc \
             harfbuzz fribidi libraqm libimagequant libxcb \
             python${PYTHON_VERSION}-devel python${PYTHON_VERSION}-pip \
-        && microdnf clean all; \
+        && microdnf update -y && microdnf clean all; \
         python${PYTHON_VERSION} -m venv ${VIRTUAL_ENV}; \
         python -m pip install -U pip uv --no-cache; \
         make -C /numactl install; \
