--- a/Dockerfile.rocm.ubi
+++ b/Dockerfile.rocm.ubi
@@ -128,7 +128,7 @@ ENV TIKTOKEN_RS_CACHE_DIR=${TIKTOKEN_CACHE_DIR}
 RUN --mount=type=bind,src=tools/predownload_tiktoken_tokenizers.py,target=predownload_tiktoken_tokenizers.py \
     python predownload_tiktoken_tokenizers.py && \
     chmod g+rwx "${TIKTOKEN_CACHE_DIR}" && \
-    chown -R vllm:vllm ~/.cache
+    chown -R vllm:0 ~/.cache
 
 COPY LICENSE /licenses/vllm.md
 COPY examples/*.jinja /app/data/template/
