--- a/Dockerfile.konflux.cpu
+++ b/Dockerfile.konflux.cpu
@@ -118,7 +118,7 @@ RUN --mount=type=cache,target=/root/.cache/uv \
     pkgconfig gcc-toolset-14 libsndfile \
     libtiff libjpeg openjpeg2 zlib \
     freetype lcms2 libwebp tcl tk utf8proc \
-    harfbuzz fribidi libxcb yajl-devel \
+    harfbuzz fribidi libxcb \
     python${PYTHON_VERSION}-devel python${PYTHON_VERSION}-pip \
     && microdnf update -y && microdnf clean all; \
     python${PYTHON_VERSION} -m venv ${VIRTUAL_ENV}; \
