RHOAIENG 48733:fix pytorch version for ibm z
Signed-off-by: Rehan Khan <Rehan.Khan7@ibm.com>

--- a/.tekton/vllm-cpu-pull-request.yaml
+++ b/.tekton/vllm-cpu-pull-request.yaml
@@ -34,6 +34,8 @@ spec:
     value: Dockerfile.konflux.cpu
   - name: path-context
     value: .
+  - name: rhoai-version
+    value: "3.3.0"
   - name: hermetic
     value: false
   - name: build-source-image
